2011-10-25  Simson Garfinkel  <simsong@imac3.home>

	* src/dig.cpp (state::dig_self_test): added explicit cast to ft to avoid compiler warning.

	* src/main.h (class global): renamed class main to class global so that main() doesn't shadow main::main() (which doesn't exist)

	* src/main.cpp (state::hashdeep_process_command_line): renamed argc and argv to argc_ and argv_ so as not to shadow instance variables.

	* src/display.cpp (display::finalize_matching): removed known_size() as a local, since we have a function that does it.
	(display::compute_unused): renamed parameter from display to show_display to avoid compiler warning.

	* src/main.h (class display): renamed out to out_ so as not to shadow parameter.
	(std::vector): removed num_columns, as it wasn't being used outside the local function.

2011-10-17  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/xml.cpp (pop): added flush to out to make it easier for people to undestand status.

2011-10-15  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/display.cpp: removed #include <sstream>

	* src/main.cpp: removed #include <sstream>

2011-10-09  Simson Garfinkel  <simsong@alphonse-mucha.home>

	* tests/tests.sh (TMP): renamed TEST_DIR to TEST_BIN and GOOD_DIR to GOOD_BIN

2011-10-09  Simson Garfinkel  <simsong@new-host-2.home>

	* configure.ac (HAVE_PTHREAD): quoted AX_PTHREAD in the configure script

2011-10-09  Simson Garfinkel  <simsong@new-host-3.home>

	* configure.ac: version number increased to 4.0.0_beta_001

	* src/main.cpp (md5deep_usage): 

	All programs now have a -C option that enables Common Crypto on
	Mac. It is disabled by default. You can use it if you want.

	Windows - All tests now pass, with the exception that the windows
	files now have proper UTF-8 in them rather than the question-mark
	escaping. You can escape the UTF-8 by providing the flags. You can
	run the tests.sh script with "--nounicode" to remove the filenames